# flux

./: .gitignore  Cargo.toml  GITHUB.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json
crates/flux-agent/: Cargo.toml
crates/flux-agent/src/: main.rs
crates/flux-core/: Cargo.toml
crates/flux-core/src/: cpu.rs  disk.rs  lib.rs  memory.rs  network.rs  process.rs  protocol.rs  sensors.rs  smart.rs  system_info.rs
crates/flux-core/tests/: parsers.rs
docs/: ABOUT.md  API.md
packaging/: Dockerfile  Dockerfile.rpm  README.md  build-rpm.sh  build.sh  release.sh  test-fleet.sh
packaging/apt-repo/: .gitignore  build.sh  deploy.sh  gen-key.sh  pages-README.md  pubkey.gpg  setup.sh
packaging/apt-repo/conf/: distributions
packaging/aur/: PKGBUILD
snap/: snapcraft.yaml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: .gitignore
src-tauri/src/: alerts.rs  api_server.rs  commands_alerts.rs  commands_hosts.rs  commands_modules.rs  commands_monitor.rs  commands_process.rs  commands_settings.rs  commands_terminal.rs  history.rs  lib.rs  main.rs  state.rs  terminal.rs  tray.rs
src-tauri/src/modules/: cleaner.rs  docker.rs  docker_prefs.rs  docker_shell.rs  hardware.rs  mod.rs  services.rs  smart.rs  startup.rs  uninstaller.rs
src-tauri/src/monitor/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  process.rs  process_actions.rs  process_detail.rs  system_info.rs
src-tauri/src/remote/: agent_client.rs  agentless.rs  deploy.rs  hosts.rs  mod.rs  poller.rs  power.rs  proxmox.rs  session.rs
src-tauri/tests/: ssh_remote.rs
src/components/charts/: AreaChart.tsx  Meter.tsx  Sparkline.tsx
src/components/hosts/: AddHostWizard.tsx  FleetProcessTable.tsx  HostGate.tsx  HostSwitcher.tsx  HostTile.tsx  InstallDebModal.tsx
src/components/layout/: AssistantPanel.tsx  ResizeHandles.tsx  ScreenHeader.tsx  Sidebar.tsx  TitleBar.tsx
src/components/monitor/: SmartCard.tsx
src/components/terminal/: HostTerminal.tsx  TerminalPanel.tsx
src/components/ui/: Badge.tsx  Banner.tsx  Button.tsx  Drawer.tsx  EmptyState.tsx  Input.tsx  LoadingState.tsx  Modal.tsx  SegmentedControl.tsx  Switch.tsx
src/config/: navigation.ts
src/hooks/: useFleetEvents.ts  useHistory.ts  useHostMetrics.ts  useMonitorTick.ts  useSelectedHostName.ts
src/lib/: format.ts  settings.ts  tauri.ts  theme.ts
src/pages/: Alerts.tsx  Cleaner.tsx  Docker.tsx  Fleet.tsx  HardwareInfo.tsx  Performance.tsx  Processes.tsx  Sensors.tsx  Services.tsx  Settings.tsx  Startup.tsx  Tools.tsx  Uninstaller.tsx
src/pages/docker/: Compose.tsx  Containers.tsx  Images.tsx  InspectDrawer.tsx  Networks.tsx  RunDialog.tsx  ShellPanel.tsx  Volumes.tsx  shared.tsx
src/state/: dockerStore.ts  fleetStore.ts  history.ts  hostsStore.ts  lockStore.ts  monitorStore.ts  terminalStore.ts
src/types/: alerts.ts  hosts.ts  monitor.ts
