[package]
name = "flux"
version = "0.2.6"
license = "MIT"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flux-core = { path = "../crates/flux-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time", "macros", "sync"] }
nix = { workspace = true }
libc = { workspace = true }
tauri-plugin-single-instance = "2.4.2"
chrono = "0.4"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tiny_http = "0.12"
portable-pty = "0.9"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
rusqlite = { version = "0.40.1", features = ["bundled"] }

