[package]
name = "flux-core"
version = "0.2.2"
license = "MIT"
edition = "2021"
description = "Shared metric collectors and snapshot types for Flux and flux-agent"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
